dev/soludev/sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-sonarqube
  namespace: soludev
  labels:
    app: sonarqube
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarqube
